@@ -38,3 +38,4 @@ public class Main extends Application {
 		launch(args);
 	}
 }
+// --module-path C:\java-libs\javafx-sdk\lib --add-modules=javafx.fxml,javafx.controls
